USASNGI-522 : RTI slider : UPDATE : Overflow fix

--- a/stylesheets/widgets/product-carousel-listing.less
+++ b/stylesheets/widgets/product-carousel-listing.less
@@ -18,7 +18,7 @@
 
   }
   &.no-swiper {
-    overflow: auto; 
+    overflow: unset; 
     width: 100%;
     display: flex;
     justify-content: center;
